[package]
name = "webbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = "3.0"
mime_guess = "2.0"

[dev-dependencies]
lazy_static = "1.4"
